testsuite/tests/explicit-dicts/should_fail/Roles7.stderr

Roles7.hs:12:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of instance incoherence:
      In the function type ‘a -> F a -> F a’
        Type variable ‘a’ has role Nominal
    • In the expression:
        (undefined :: Ord a => a -> F a -> F a)
          ((reverseOrd @Int :: Ord a))
      In an equation for ‘f7’:
          f7
            = (undefined :: Ord a => a -> F a -> F a)
                ((reverseOrd @Int :: Ord a))
